fix overflow on category image

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -379,6 +379,9 @@ h3.project-title{
 .project-image-container {
     overflow:hidden;
 }
+.category-col .project-image-container{
+  height:148px;
+}
 .col-md-6.project-col .project-image-container,.col-md-12.project-col .project-image-container {
     height: 311px;
 }
@@ -694,6 +697,9 @@ a.carousel-control.right:hover {
  .col-sm-6.col-md-6.project-col .side-line,.col-sm-6.col-md-12.project-col .side-line{
   height: 262px;
  }
+ .category-col .project-image-container{
+  height:120px;
+}
 }
 @media (max-width: 992px){
   .category-col .side-line,.col-sm-6.col-md-6.project-col .side-line,.col-sm-6.col-md-12.project-col .side-line,.col-sm-6.col-md-4.project-col .side-line {   
